# vamos-monitors

./: .gitignore  CMakeLists.txt  README.md  listen.sh  monitor-consume.c  monitor-drregex.c  monitor-entropy.c  monitor-fastbuf-io.c  monitor-generic.c  monitor-io.c  monitor-regex.c  monitor-shmbuf-funs.c  monitor-stdin.c  monitors-utils.h  utils.c
